--- a/.github/workflows/zdm_crawler.yml
+++ b/.github/workflows/zdm_crawler.yml
@@ -2,15 +2,9 @@ name: zdm_crawler
 
 on:
   #将下面两行代码取消注释
-  schedule:
-    - cron: "30 22 "
-    - cron: "30 00 "
-    - cron: "15 02 "
-    - cron: "30 07 "
-    - cron: "30 09 "
-    - cron: "30 12 "
-    - cron: "30 14 "
-    workflow_dispatch:
+  #schedule:
+    #- cron: "0/15 * * * *"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -30,11 +24,11 @@ jobs:
     - name: main logic
       env:
         # 点值的数量>minVoted,才会被推送,填0为都推送
-        minVoted: 13
+        minVoted: 10
         # 评论的数量>minComments,才会被推送,填0为都推送
-        minComments: 3
+        minComments: 2
         # 优惠信息数量>MIN_PUSH_SIZE就会发邮件,否则积累到下一次触发任务再决定是否推送. 不建议填太小的数字,避免邮件太多了
-        MIN_PUSH_SIZE: 13
+        MIN_PUSH_SIZE: 20
         # 邮箱的smtp服务器地址
         emailHost: smtp.qq.com
         # 接收优惠信息的邮箱
@@ -50,7 +44,7 @@ jobs:
     - name: commit & push
       uses: actions-go/push@master
       with:
-        author-email: '862655699@qq.com'
-        author-name: 'jy'
+        author-email: 'actions@github.com'
+        author-name: 'GitHub Actions'
         commit-message: 'update articles'
         token: ${{ secrets.GIT_TOKEN }}
