--- a/.github/workflows/zdm_crawler.yml
+++ b/.github/workflows/zdm_crawler.yml
@@ -2,8 +2,8 @@ name: zdm_crawler
 
 on:
   #将下面两行代码取消注释
-  #schedule:
-    #- cron: "0/15 * * * *"
+  schedule:
+     - cron: "30/22 15/02 30/04 30/07 30/09 30/12 30/14"
   workflow_dispatch:
 
 jobs:
