--- a/.github/workflows/zdm_crawler.yml
+++ b/.github/workflows/zdm_crawler.yml
@@ -2,10 +2,9 @@ name: zdm_crawler
 
 on:
   #将下面两行代码取消注释
-  schedule:
-     - cron: '20 22 * * *'
+  #schedule:
+    #- cron: "0/15 * * * *"
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
