--- a/.github/workflows/zdm_crawler.yml
+++ b/.github/workflows/zdm_crawler.yml
@@ -49,7 +49,7 @@ jobs:
     - name: commit & push
       uses: actions-go/push@master
       with:
-        author-email: 'actions@github.com'
-        author-name: 'GitHub Actions'
+        author-email: '862655699@qq.com'
+        author-name: 'jy'
         commit-message: 'update articles'
         token: ${{ secrets.GIT_TOKEN }}
