--- a/.github/workflows/zdm_crawler.yml
+++ b/.github/workflows/zdm_crawler.yml
@@ -50,6 +50,6 @@ jobs:
       uses: actions-go/push@master
       with:
         author-email: '862655699@qq.com'
-        author-name: 'jy'
+        author-name: 'aihuazai'
         commit-message: 'update articles'
         token: ${{ secrets.GIT_TOKEN }}
